--- a/master-thesis.html
+++ b/master-thesis.html
@@ -128,6 +128,15 @@
 <iframe allowfullscreen="" frameborder="0" height="486" marginheight="0" marginwidth="0" scrolling="no" src="//www.slideshare.net/slideshow/embed_code/4865492" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" width="597"> </iframe> <div style="margin-bottom:5px"> <strong> <a href="https://www.slideshare.net/icaromedeiros/tag-suggestion-using-mu" target="_blank" title="Tag Suggestion using Multiple Sources of Knowledge">Tag Suggestion using Multiple Sources of Knowledge</a> </strong> from <strong><a href="http://www.slideshare.net/icaromedeiros" target="_blank">Ícaro Medeiros</a></strong> </div></body></html>
             </div>
             <!-- /.entry-content -->
+    <hr />
+    <!-- AddThis Button BEGIN -->
+    <div class="addthis_toolbox addthis_default_style">
+            <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+    </div>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53f14e6163baee9f"></script>
+    <!-- AddThis Button END -->
         </article>
     </section>
 
@@ -336,6 +345,26 @@
                         </li>
                     </ul>
                 </li>    
+
+    <li class="list-group-item">
+        <h4>
+            <i class="fa fa-github fa-lg"></i>
+            <span class="icon-label">GitHub Repos</span>
+        </h4>
+        <div id="gh_repos" style="background-color: white">
+            <p class="list-group-item">Status updating...</p>
+        </div>
+            <a href="https://github.com/icaromedeiros">@icaromedeiros</a> on GitHub
+    </li>
+
+
+    <li class="list-group-item"><h4><i class="fa fa-twitter fa-lg"></i><span class="icon-label">Latest Tweets</span></h4></li>
+    <div id="twitter_timeline">
+        <a class="twitter-timeline" data-chrome="noheader" href="https://twitter.com/icaromedeiros" data-widget-id="501159537634590722">Tweets by icaromedeiros</a>
+    </div>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
     <li class="list-group-item"><h4><i class="fa fa-external-link-square fa-lg"></i><span class="icon-label">Links</span></h4>
       <ul class="list-group" id="links">
         <li class="list-group-item">
@@ -382,5 +411,26 @@
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="/theme/js/respond.min.js"></script>
 
+    <!-- GitHub JS -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            if (!window.jXHR) {
+                var jxhr = document.createElement('script');
+                jxhr.type = 'text/javascript';
+                jxhr.src = '/theme/js/jXHR.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(jxhr, s);
+            }
+
+            github.showRepos({
+                user: 'icaromedeiros',
+                count: 5,
+                skip_forks: false,
+                target: '#gh_repos'
+            });
+        });
+    </script>
+    <script src="/theme/js/github.js" type="text/javascript"></script>
+    <!-- End GitHub JS Code -->
 </body>
 </html>
